Se elimino informacion redundante, la web trabaja a traves de MockApi, y se corrigieron errores de roles en el login

--- a/Proyecto Suprasoft AdminLTE/logo.html
+++ b/Proyecto Suprasoft AdminLTE/logo.html
@@ -18,7 +18,7 @@
             }
 
         span {
-            color: #7130e9;
+            color: #109ad1;
         }
 
         p {
@@ -31,7 +31,7 @@
         }
 
         .circulo {
-            background-color: #7130e9;
+            background-color: #109ad1;
             border-radius: 50%;
             width: 00px;
         }
@@ -40,10 +40,10 @@
 </head>
 <body>
     <h1>
-        <span><i class="fa-solid fa-earth-americas"></i></span> TravelUs<span>Admin</span>
+        <span><i class="fa-solid fa-earth-americas"></i></span>SupraSOFT<span>Admin</span>
     </h1>
     <div class="circulo">
-        <P>T<span>A</span></P>
+        <P>S<span>S</span></P>
     </div>
 </body>
 </html>
