--- a/Proyecto Suprasoft AdminLTE/index.html
+++ b/Proyecto Suprasoft AdminLTE/index.html
@@ -4,7 +4,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Travel Us Admin</title> 
+  <title>SupraSOFT Admin</title> 
   <link rel="icon" href="/img/logo1.png"> 
 
   <!--=====================================
